syntax = "proto3";
package tradingdatapb;

enum TRADETYPE {
    TRADETYPE_BUY = 0;
    TRADETYPE_SELL = 1;
}

message TradeInfo {
    string id = 1;
    int64 curtime = 2;
    float price = 3;
    float size = 4;
}

message SendTradeData {
    string market = 1;
    string symbol = 2;
    repeated TradeInfo trades = 3;
}

message ReplySendTradeData {
    int32 nums = 1;
    string errInfo = 2;
}

// TradingDataService - tradingdata service
service TradingDataService {
    // translate - translate text
    rpc sendTradeData(SendTradeData) returns (ReplySendTradeData) {}
}